invoke delete via post from jquery and doing a delete with get is ugly